--- a/portlet/ecm/src/main/webapp/skin/webui/component/browse/UIEventViewer/VistaStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/browse/UIEventViewer/VistaStylesheet.css
@@ -45,6 +45,10 @@
 	color: #058ee6;
 }
 
+.UIEventViewer .EventContent .TopEventContentDetail {
+  height: 100%;
+}
+
 .UIEventViewer .EventContent .EventDocumentLabel {
 	margin-left: 5px;
   line-height: 18px; vertical-align: middle;
